amf-client/shared/src/test/resources/parser-results/raml/error/cycle-references/api.raml
#%RAML 1.0
title: test cycle
uses:
  YaKassa: yaKassa.raml

types:
  localInvoice: YaKassa.InvoiceId
/api:
  post:
    body:
      application/json: localInvoice
